<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="in.co.kissanvendor.fragments.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="in.co.kissanvendor.fragments.MyAccountFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_myaccount" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="in.co.kissanvendor.fragments.MyOrdersFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_myorders" />
</navigation>