<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_box"
    android:gravity="center">

    <LinearLayout
        android:layout_width="@dimen/three_hundred"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/dialog_box"
        android:padding="@dimen/twenty">

        <TextView
            android:id="@+id/forgot_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/change_pass"
            android:textAppearance="@style/forgot_pass_dial"
            android:textStyle="bold"
            android:gravity="top" />

        <TextView
            android:id="@+id/we_will_hel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/five"
            android:text="@string/please_enter_new_password"
            android:textAppearance="@style/we_will_hel"
            android:gravity="top" />

        <TextView
            android:id="@+id/e_mail_mobi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/three"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/twenty"
            android:text="@string/new_passwor"
            android:textAppearance="@style/new_passwor"
            android:gravity="top" />

        <EditText
            android:id="@+id/newpwd"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fifty"
            android:layout_marginTop="@dimen/five"
            android:paddingLeft="@dimen/fifteen"
            android:paddingRight="@dimen/fifteen"
            android:background="@drawable/rectangle_3" />

        <TextView
            android:id="@+id/e_retyppwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/three"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/twenty"
            android:text="@string/retype_pass"
            android:textAppearance="@style/new_passwor"
            android:gravity="top" />

        <EditText
            android:id="@+id/confirmpwd"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fifty"
            android:layout_marginTop="@dimen/five"
            android:paddingLeft="@dimen/fifteen"
            android:paddingRight="@dimen/fifteen"
            android:background="@drawable/rectangle_3" />

        <Button
            android:id="@+id/submit_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fifty"
            android:layout_marginTop="@dimen/thirty"
            android:background="@drawable/drawable_rectangle_1"
            android:text="@string/submit"
            android:textAppearance="@style/continue_wi" />


        <TextView
            android:id="@+id/back"
            android:layout_width="35dp"
            android:layout_height="21dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/fifteen"
            android:text="@string/back"
            android:textAppearance="@style/back"
            android:gravity="top"
            />

    </LinearLayout>

</LinearLayout>